<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:text="@string/set_time"
        android:textColor="@color/white" />

    <TimePicker
        android:id="@+id/dialog_time_picker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    </TimePicker>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/open_hours" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <Button
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:background="@drawable/round_rect_corner_red"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textColor="@color/white" />

        <Button
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:background="@drawable/round_rect_corner_red"
            android:text="@string/set"
            android:textAllCaps="false"
            android:textColor="@color/white" />

    </LinearLayout>

</LinearLayout>