<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <include layout="@layout/toolbar" />

    <TextView
        android:id="@+id/register_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:text="@string/register_tips"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:gravity="center_vertical">

        <ImageView
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:src="@drawable/ic_phone" />

        <EditText
            android:id="@+id/register_phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:drawableLeft="@drawable/ic_flag"
            android:drawablePadding="10dp"
            android:hint="@string/phone_number"
            android:inputType="phone"
            android:textSize="16sp" />

    </LinearLayout>

    <Button
        android:id="@+id/register_verify"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="-10dp"
        android:background="@drawable/round_red"
        android:text="@string/register_verify"
        android:textAllCaps="false"
        android:textColor="@color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical">

        <ImageView
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:src="@drawable/ic_verify" />

        <EditText
            android:id="@+id/register_verify_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:hint="@string/register_verify_code"
            android:inputType="number"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/register_password_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical">

        <ImageView
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:src="@drawable/ic_lock" />

        <EditText
            android:id="@+id/register_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:fontFamily="sans-serif"
            android:hint="@string/register_password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/register_terms_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <android.support.v7.widget.AppCompatCheckBox
            android:id="@+id/register_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_agree" />

        <TextView
            android:id="@+id/register_terms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_terms"
            android:textColor="@drawable/text_color_blue" />

    </LinearLayout>

    <Button
        android:id="@+id/register_sign_up"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/round_black"
        android:text="@string/sign_up"
        android:textColor="@color/white" />

</LinearLayout>